se agrego el footer

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
             </div>
         </nav>
     </header>
+    <footer class="bg-dark text-light py-4">
+        <div class="container text-center">
+            <i class="fab fa-linkedin fa-2x mr-2"></i>
+            <i class="fab fa-github-square fa-2x"></i>
+            <p class="mt-2 font-weight-bold">Arias Emilse</p>
+            <p>&copy; Todos los derechos reservados</p>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
