--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
             </div>
         </nav>
     </header>
+<section class="container">
+    <article>
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <p>Agregar imagen</p>
+                <p>Arias Emilse A.</p>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <h3>Informacion Basica</h3>
+                <hr>
+                
+            </div>
+        </div>
+    </article>
+</section> 
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
             <i class="fab fa-linkedin fa-2x mr-2"></i>
