--- a/index.html
+++ b/index.html
@@ -47,21 +47,25 @@
             </div>
         </nav>
     </header>
-<section class="container">
-    <article>
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
-                <p>Agregar imagen</p>
-                <p>Arias Emilse A.</p>
+    <section class="fondo text-center py-4 text-light">
+        <img src="img/avatar3.svg" width="150px">
+        <h3 class="mt-3">Arias Emilse</h3>
+        <p class="lead">Software developer</p>
+    </section>
+    <section class="container">
+        <article>
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <p>Agregar imagen</p>
+                    <p>Arias Emilse A.</p>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <h3>Informacion Basica</h3>
+                    <hr>
+                </div>
             </div>
-            <div class="col-sm-12 col-md-6">
-                <h3>Informacion Basica</h3>
-                <hr>
-                
-            </div>
-        </div>
-    </article>
-</section> 
+        </article>
+    </section>
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
             <i class="fab fa-linkedin fa-2x mr-2"></i>
