se completo la seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -53,17 +53,24 @@
         <p class="lead">Software developer</p>
     </section>
     <section class="container">
-        <article>
-            <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <p>Agregar imagen</p>
-                    <p>Arias Emilse A.</p>
-                </div>
-                <div class="col-sm-12 col-md-6">
-                    <h3>Informacion Basica</h3>
-                    <hr>
-                </div>
-            </div>
+        <h2 class="display-4 text-center my-4">Sobre mi</h2>
+        <article class="shadow p-3 mb-5 bg-white rounded">
+            <h3 class="text-primary">Información Basica</h3>
+            <hr>
+            <p><strong>Edad:</strong> 32 años</p>
+            <p><strong>Email:</strong> emilsearias@gmail.com</p>
+            <p><strong>Tel:</strong> +54 381 6577383</p>
+            <p><strong>Direccion:</strong> Corrientes 40, San Miguel de Tucumán, Tucumán</p>
+            <hr>
+            <h3 class="text-primary">Mi historia</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, numquam omnis sapiente facilis quisquam
+                repellat doloribus autem? Dolorem eveniet doloremque nihil alias velit aspernatur neque ad voluptatem,
+                soluta quibusdam. Dolorum cupiditate est quasi culpa tenetur nihil laboriosam officiis laborum corporis
+                eius vitae eos aut accusantium, quod maxime iste. Incidunt, quod neque. Laborum, sit architecto voluptas
+                illum facere velit minima. Non fuga quo perferendis fugit dolorem eaque officia laudantium tenetur,
+                alias fugiat sunt beatae minima expedita vero. Quo modi nemo quasi dolorum provident velit excepturi,
+                qui error doloribus cum deleniti molestiae incidunt laborum architecto? Et eius, beatae tempora rem
+                perferendis incidunt.</p>
         </article>
     </section>
     <footer class="bg-dark text-light py-4">
