comenzando a trabajar la card horizontal

--- a/index.html
+++ b/index.html
@@ -72,7 +72,26 @@
                 qui error doloribus cum deleniti molestiae incidunt laborum architecto? Et eius, beatae tempora rem
                 perferendis incidunt.</p>
         </article>
+        <h2 class="display-4 text-center my4">Experciencia laboral</h2>
+        <article>
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                  <div class="col-md-4 bg-primary">
+                    <p class="lead text-light">Fecha desde - fecha hasta</p>
+                    <p class="lead text-light">Lugar de trabajo</p>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Mi puesto de trabajo</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                   
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </article>
     </section>
+
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
             <i class="fab fa-linkedin fa-2x mr-2"></i>
